--- a/01-CursoHTML/index.html
+++ b/01-CursoHTML/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ARG"> <!--Si usamos palabras que solo se entiendan en un pais, especificamos el tipo de español.Si no es asi, solo ponemos lang="es". -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- title - entre 55 y 65 caracteres -->
-  <title>Aprendiendo HTML</title>
-  <!-- description - no más de 165 caracteres -->
-  <meta name="description" content="En esta página estamos aprendiendo lo fundamentos de HTML con @jonmircha">
+  <title>Aprendiendo HTML</title> <!-- title - entre 55 y 65 caracteres -->
+  
+  <meta name="description" content="En esta página estamos aprendiendo lo fundamentos de HTML con @jonmircha"><!-- description - no más de 165 caracteres - Cada doc html debe tener un titulo y una descripcion diferente. Porque a la hora de entrar desde google, se muestra los sitios mas visitados de la pagina y no queremos que la descripcon de la pagina principal se repita en todos los lugares.-->
   <link rel="canonical" href="http://tudominio.com/la-url-canonica">
   <link rel="icon" href="img/favicon.png">
   <link rel="apple-touch-icon" href="img/favicon.png">
