--- a/01-CursoHTML/index.html
+++ b/01-CursoHTML/index.html
@@ -87,14 +87,34 @@
     Palabras en: <b>negrita</b>, <i>itálica</i>, <u>subrayado</u>, e=mc<sup>2</sup>, H<sub>2</sub>O,
     <mark>marca texto</mark> <small>letras pequeñas</small>
   </p>
+  <!-- Links a revisar
+  https://www.freecodecamp.org/espanol/news/tutorial-html-texto-en-negrita-como-usar-la-etiqueta-b/
+  https://www.freecodecamp.org/espanol/news/tutorial-de-html-en-cursiva-como-hacer-que-el-texto-en-cursiva-con-la-etiqueta/#:~:text=La%20etiqueta%20%2C%20o,texto%20se%20muestra%20en%20cursiva.
+  https://www.aprendoencasa.com/etiqueta-u-curso-practico-html5/
+  https://www.htmlquick.com/es/reference/tags/u.html
+  https://developer.mozilla.org/es/docs/Web/HTML/Element/u
+  https://www.htmlquick.com/es/reference/tags/var.html
+  https://www.htmlquick.com/es/reference/tags/sup.html
+  https://www.htmlquick.com/es/reference/tags/sub.html
+  https://bigcode.es/elemento-mark-en-html/
+  https://www.htmlquick.com/es/reference/tags/mark.html
+  https://developer.mozilla.org/es/docs/Web/HTML/Element/mark#:~:text=Consulta%20tambi%C3%A9n-,%3A%20el%20elemento%20de%20resaltado%20de%20texto,importancia%20en%20un%20contexto%20particular.
+  http://desarrolloweb.dlsi.ua.es/libros/html-css/los-elementos-code-kbd-pre-samp-var
+  https://developer.mozilla.org/es/docs/Web/HTML/Element/small#:~:text=El%20elemento%20HTML%20hace,m%C3%ADnimo%20de%20fuente%20del%20navegador.
+  https://www.htmlquick.com/es/reference/tags/small.html
+  -->
   <br>
   <a href="index.html#inicio">☝️</a>
-  <hr>
+  <hr> <!--El elemento HTML <hr> representa un cambio de tema entre párrafos (por ejemplo, un cambio de
+    escena en una historia, un cambio de tema en una sección). En versiones previas de HTML representaba
+    una línea horizontal. Aún puede ser representada como una línea horizontal en los navegadores
+    visuales, pero ahora es definida en términos semánticos y no tanto en términos representativos, por
+    tanto, para dibujar una línea horizontal se debería usar el CSS apropiado. Ver como esta usado en esta pagina. O en https://jonmircha.com/hola-->
   <h2 id="textos-semanticos">Etiquetas de Texto Semánticas</h2>
   <p>
     <strong>Este texto es importante</strong>. <em>Este texto hace énfasis</em>.
   </p>
-  <blockquote>Yo sólo sé, que no se nada</blockquote>
+  <blockquote>Yo sólo sé, que no se nada</blockquote> <!--esta etiqueta y cite ver en el pdf de html-->
   <cite>Sócrates</cite>
   <br>
   <a href="index.html#inicio">☝️</a>
@@ -109,7 +129,10 @@
   <hr>
   <h2 id="etiquetas-formateo">Etiquetas de Formateo</h2>
   <p>
-  <pre>
+  <pre> <!--La etiqueta <pre> define el texto preformateado.
+    El texto de un elemento <pre> se muestra en una fuente de ancho fijo y el texto conserva tanto los
+    espacios como los saltos de línea. El texto se mostrará exactamente como está escrito en el código
+    fuente HTML. Ten en cuenta que esta etiqueta cambiará tu tipografía a una fuente monoespaciada. Este tipo de fuente tiene la característica de hacer que cada letra ocupe el mismo espacio en la línea, sea mayúscula o minúscula.-->
     Tareas por hacer:
     - HTML
       - Terminar de grabar las secciones de este curso.
@@ -120,7 +143,7 @@
   </pre>
   </p>
   <p>
-    <code>Este texto está en formato de código</code>
+    <code>Este texto está en formato de código</code> <!--La etiqueta <code>, permite definir texto resaltado, utilizando para indicar que el texto hace referencia bien a partes de un ordenador, o código fuente de programación. El elemento code se coloca generalmente dentro de pre para aprovechar las ventajas de sus características: los espacios y los quiebres de línea en el código son respetados en la versión representada del documento. Tambien tendra una tipografía a una fuente monoespaciada. Los < y > se mostraran con error en algunos casos. Por lo tanto reemplazarlos segun su codigo en esta tabla https://ascii.cl/es/codigos-html.htm (recordar que para la ñ, el codigo es &ntilde; )-->
   </p>
   <p>
   <pre>
