--- a/01-CursoHTML/index.html
+++ b/01-CursoHTML/index.html
@@ -206,7 +206,7 @@
   <br>
   <a href="index.html#inicio">☝️</a>
   <hr>
-  <h2 id="svg">SVG</h2>
+  <h2 id="svg">SVG</h2><!--Ve Tipos de imágenes en el pdf html hasta el final del documento. -->
   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
     y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
     <path style="fill:#FFA54B;" d="M472.001,384c0,0-16.667-74.667-64-128c-7.135-8.04,28-248,8-248c-31,0-68,86-128,136l0.52,6.842
@@ -329,12 +329,16 @@
     <path fill-rule="evenodd" clip-rule="evenodd"
       d="M5 7H19C19.5523 7 20 7.44771 20 8V16C20 16.5523 19.5523 17 19 17H5C4.44772 17 4 16.5523 4 16V8C4 7.44772 4.44772 7 5 7ZM2 8C2 6.34315 3.34315 5 5 5H19C20.6569 5 22 6.34315 22 8V16C22 17.6569 20.6569 19 19 19H5C3.34315 19 2 17.6569 2 16V8ZM10 9L14 12L10 15V9Z"
       fill="currentColor" />
-  </svg>
+  </svg> <!--Icono sacado de https://css.gg/ recordar que hay muchos sitios de donde descargar conos en foma de codigo o archivo listo para enlazar.-->
   <img src="img/fox-svgrepo-com.svg" alt="Fox in SVG">
   <br>
   <a href="index.html#inicio">☝️</a>
   <hr>
   <h2 id="figuras">Figuras</h2>
+  <!--LInks para leer
+  https://www.htmlquick.com/es/reference/tags/figure.html
+  https://www.htmlquick.com/es/reference/tags/figcaption.html
+  https://html.com/tags/figure/-->
   <figure>
     <img src="img/periodic-table-of-html-elements.png" alt="Tabla de los Elementos HTML">
     <figcaption>Tabla de los Elementos HTML</figcaption>
@@ -342,7 +346,7 @@
   <br>
   <a href="index.html#inicio">☝️</a>
   <hr>
-  <h2 id="listas-ordenadas">Listas Ordenadas</h2>
+  <h2 id="listas-ordenadas">Listas Ordenadas</h2> <!--Ver listas, menu de navegacion y listas anidadas en doc html-->
   <h3>Las estaciones del año</h3>
   <ol>
     <li>Primavera</li>
@@ -404,7 +408,7 @@
   <a href="index.html#inicio">☝️</a>
   <hr>
   <h2 id="tablas">Tablas</h2>
-  <table>
+  <table> <!--Ver todo sobre tablas en el doc html-->
     <tr>
       <td>Nombre</td>
       <td>Constelación</td>
@@ -473,14 +477,18 @@
   <br>
   <a href="index.html#inicio">☝️</a>
   <hr>
-  <h2 id="enlaces">Enlaces</h2>
+  <h2 id="enlaces">Enlaces</h2><!--Ver enlaces en el documento-->
   <a href="hola.html">Hacia la página Hola</a>
   <br>
+  <!--https://es.semrush.com/blog/enlaces-nofollow/
+      https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify?hl=es-419
+      https://es.ryte.com/wiki/Nofollow
+  -->
   <a href="https://jonmircha.com" target="_blank" rel="nofollow">Visita mi sitio web jonmircha.com</a>
   <br>
   <a href="https://jonmircha.com/cursos" target="_blank">
     <img src="img/kEnAi.svg" alt="Ir hacia mis cursos en jonmircha.com" width="40" height="40">
-  </a>
+  </a> <!--Enlace en una imagen-->
   <br>
   <a href="https://youtube.com/jonmircha" target="_blank">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
