--- a/01-CursoHTML/index.html
+++ b/01-CursoHTML/index.html
@@ -388,7 +388,7 @@
     <li>Editar el video final</li>
     <li>subirlo a YouTube</li>
   </ul>
-  <ul type="square">
+  <ul type="square"> <!--Cuadrados rellenos-->
     <li>Terminar de grabar los fragmentos del curso de HTML</li>
     <li>Editar el video final</li>
     <li>subirlo a YouTube</li>
