--- a/01-CursoHTML/index.html
+++ b/01-CursoHTML/index.html
@@ -665,7 +665,8 @@
     <option value="">Python</option>
   </select>
   <br>
-  <input type="text" value="jonmircha" readonly disabled>
+  <input type="text" value="jonmircha" readonly disabled> <!-- Input desabilitado cuando tenga el atributo disabled. 
+  https://comocreartuweb.com/curso-de-html/formularios-con-html5/readonly.html -->
   <br>
   <input type="text" placeholder="Escribe tu nombre">
   <br>
