--- a/02-CursosCSS/box-model.html
+++ b/02-CursosCSS/box-model.html
@@ -110,7 +110,7 @@
     <section class="float-right">Este elemento flota a la derecha</section>
     <section class="float-left">Este elemento flota a la izquierda</section>
   </article>
-  <div class="clearfix"></div>
+  <div class="clearfix"></div> <!-- Este div se usaba antes para quitar la flotacion(ver css) a partir de este div. Ya no se usa. Es una mala practica dejar elementos vacios.-->
   <article>
     <section class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, harum doloribus, officiis facilis
       quam animi voluptate expedita magni natus nesciunt aliquam quod vel. Iste sed cumque aliquid cupiditate labore
