--- a/02-CursosCSS/border-outline.html
+++ b/02-CursosCSS/border-outline.html
@@ -19,7 +19,7 @@
   <h2>Outlines</h2>
   <div class="box outline">Outline</div>
   <div style="text-align: center;">
-    <input type="text">
+    <input type="text"> <!-- Se activa la propiedad outline cuando hacemos foco en el input. Inspeccionar-->
   </div>
   <a href="index.html#temario-css">☝️</a>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
