--- a/02-CursosCSS/fonts-texts.html
+++ b/02-CursosCSS/fonts-texts.html
@@ -15,6 +15,7 @@
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/fonts-texts.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" /> <!-- hoja de estilos para fit-screen -> forma mas facil de usar iconos.. solo agregamos esta hoja y el span y listo! los otros iconos estan mas complicados xd -->
 </head>
 
 <body>
@@ -72,6 +73,9 @@
     </span>
     <span class="material-icons">
       favorite
+    </span>
+    <span class="material-symbols-outlined">
+      fit_screen
     </span>
   </div>
   <h3>Bootstrap Icons</h3>
