--- a/02-CursosCSS/index.html
+++ b/02-CursosCSS/index.html
@@ -96,6 +96,7 @@
       <li><b>Verano</b></li>
       <li><b>Otoño</b></li>
       <li><b>Invierno</b></li>
+      <b>Las opciones de arriba son estaciones del año.</b>
     </ul>
     <h3>Selectores de hermanos</h3>
     <h4>Selector de hermanos (en general)</h4>
@@ -122,6 +123,7 @@
         <li><a class="menu item ahora button" href="https://jonmircha.com/ahora" target="_blank">Ahora</a></li>
         <li><a class="menu-item notas button" href="http://jonmircha.com/notas" target="_blank">Notas</a></li>
         <li><a href="index.html#temario-css">Regresar al Temario</a></li>
+        <a href="http://www.google.com/?hl=es" target="_blank">Google</a>
       </ul>
     </nav>
     <h3>Selector Universal (*)</h3>
